# AuthServer

./: .gitignore  CMakeLists.txt  my_data_base.db
src/: main.cpp
src/include/: DatabaseManager.h  User.h  UserManager.h
